--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "tailwindcss": "^1.4.6",
     "vue": "^2.6.11",
+    "vue-apollo": "^3.0.0-beta.11",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
@@ -23,7 +24,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "graphql-tag": "^2.9.0",
     "prettier": "^1.19.1",
+    "vue-cli-plugin-apollo": "^0.22.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
