--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "tailwindcss": "^1.4.6",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue-star-rating": "^1.6.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
