--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
     "vue-router": "^3.2.0",
-    "vue-star-rating": "^1.6.1"
+    "vue-star-rating": "^1.6.1",
+    "vue-stripe-elements-plus": "^0.3.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
